XXXX-XX-XX      X.X     Fix nasty bug in formatting unallocated UK numbers;
                        Sint Maarten (SX) moved from +599 5 to +1 721;
                        UK formatting improved for 3+7 and 2+8 formats;
                        Isle of Man (IM) now sort-of treated as a country;
                        The minimal objects returned when there's no detailed
                          country-specific module available are far more
                          intelligent, thanks to libphonenumber's data;
                        New UK allocations

2011-10-29      1.9     New UK allocations;
                        Use libphonenumber's data for N::P::Country;
                        Use libphonenumber's data for N::P::NANP areanames

2011-08-18      1.8006  Add South Sudan (SS, +211) to N::P::Country;
                        New UK allocations

2011-08-05      1.8005  Include tests for bugfix in distro

2011-08-05      1.8004  Bugfix for divining country code from subclasses;
                        New UK allocations

2011-07-19      1.8003  UK parser made a teensy bit more robust;
                        UK parser bugfixed for 01768 88 mixed length stupidity
                        New UK allocations

2011-07-08      1.8002  New UK allocations;
                        Numerous small changes in Number::Phone::Country
                          Tidying number ranges in Mayotte;
                          Minor bugfix for Mayotte;
                          Gibraltar can't be called in the Spanish
                            numbering scheme any more;
                          Ellipsos satcomms have gone away;
                          Kazakhstan has +76 and +77 instead of random
                            bits all over +7;
                          Western Sahara number ranges identified;
                          Kosovo (no ISO3166 country code yet, so I'm
                            temporarily using KOS, as used by the UN