@@ -27,6 +27,9 @@ foreach my $territory (@territories) {
   my $ISO_country_code = ''.$territory->find('@id');
   # no need to create a stub for the UK, so use this for testing instead
   $ISO_country_code = $ISO_country_code eq 'GB' ? 'MOCK' : $ISO_country_code;
+  unlink "lib/Number/Phone/StubCountry/$ISO_country_code.pm"; # to clear out countries that no longer exist
+
+  next if($ISO_country_code =~ /^(IM|GG|JE)$/); # special cases in N::P
 
   open(my $module_fh, '>', "lib/Number/Phone/StubCountry/$ISO_country_code.pm")
     || die("Can't write lib/Number/Phone/StubCountry/$ISO_country_code.pm: $!\n");
